[tool.poetry]
name = "sidan-gin"
version = "0.1.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
description = "A python library for Cardano development, compatible with Mesh and Whisky types."
homepage = "https://github.com/sidan-lab/gin"
documentation = "https://github.com/sidan-lab/gin"
keywords = ["cardano"]
readme = "README.md"
authors = ["HinsonSIDAN <wongkahinhinson@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.11"  
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-xdist = "^3.5.0"
pytest-cov = "^5.0.0"
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-copybutton = "^0.5.0"
flake8 = "^7.0.0"
isort = "^5.11.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


